# shiftfeed

./: .gitignore  .last_build_id  CLAUDE.md  README.md  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  version.json
.claude/: settings.json
.github/workflows/: deploy_web.yml  scrape.yml
app/: .gitignore  RELEASES.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/: GoogleService-Info.plist
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  release_info.dart
app/linux/: CMakeLists.txt
app/test/: auth_sheet_test.dart  cve_alert_test.dart  cve_controls_layout_test.dart  cve_notifications_test.dart  cve_row_layout_test.dart  cve_row_test.dart  cve_screen_query_test.dart  cve_severity_test.dart  filter_pill_test.dart  nav_tabs_test.dart  ocp_lifecycle_test.dart  ocp_version_test.dart  widget_test.dart
app/web/: index.html  manifest.json
assets/: AssetManifest.bin.json  FontManifest.json  NOTICES
scraper/: backfill_cve_scores.py  digest.py  digest_personal.py  fcm.py  main.py  models.py  notified_cache.py  pyproject.toml  supabase_client.py
scraper/sources/: alert_rule_matcher.py  alert_rules.py  cve_enrichment.py  cve_severity.py  cve_tagger.py  github_releases.py  operator_lifecycles.py  relevance.py  rss.py  safe_fetch.py  security.py  user_rss.py
scraper/tests/: test_cve_enrichment.py  test_cve_severity.py  test_main_push_routing.py  test_operator_lifecycles.py  test_relevance.py  test_rss_sources.py
scraper/tests/fixtures/: openshift_operators.html
testing/: index.html
(+52 files in other folders)
