[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ona-scraper"
version = "0.1.0"
description = "OpenShift News Aggregator scraper"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12,<7",
    "httpx>=0.27,<0.28",
    "supabase>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "beautifulsoup4>=4.14.3,<5",
    "google-auth[requests]>=2.0",
    "anthropic>=0.40,<1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Dev-only. Deliberately NOT added to the pip install line in
# .github/workflows/scrape.yml — the hourly job never imports pytest.
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sources*"]
